# loopback

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  gluetun-run.sh  gluetun.env.example  install-gluetun.sh  install.sh  loopback.env.example  protonvpn-portforward.sh  update-loopback-port.sh
mimir/: mimir.yaml
src/: main.rs  model.rs  persistence.rs
src/config/: mod.rs
src/metrics/: mod.rs
src/network/: ip.rs  listener.rs  mod.rs  mtu.rs  pinger.rs  sender.rs
src/web/: data.rs  mod.rs
systemd/: gluetun.service  loopback-port-update.path  loopback-port-update.service  mimir.service  protonvpn-portforward.service
