[package]
name = "loopback"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
dotenvy = "0.15.7"
libc = "0.2.169"
pnet = "0.35.0"
prost = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
snap = "1"
tokio = { version = "1.42.0", features = ["full"] }
socket2 = { version = "0.5", features = ["all"] }
surge-ping = "0.8"
